# purgelogs

./: .gitignore  .gitreview  .sf.dhall  .zuul.yaml  README.md  Shakefile.hs  bindep.txt  purgelogs.py  purgelogs.spec  pyproject.toml  setup.py  test.py  tox.ini
