[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "purgelogs"
version = "0.2.3"
readme = "README.md"
license-files = ["LICENSE"]
description= "A script to purge logs."
requires-python = ">=3.11"
dependencies = ["PyYAML"]
authors = [
	{ name = "RHOS PCInfra Team", email = "rhos-dfg-pcinfra@redhat.com"},
	]
keywords = ["logs", "purge"]


[project.scripts]
purgelogs = "purgelogs:main"

[project.urls]
Homepage = "https://docs.softwarefactory-project.io/purgelogs"

[dependency-groups]
test = ["tox"]