[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "purgelogs"
version = "0.2.4"
readme = "README.md"
license-files = ["LICENSE"]
description= "A script to purge logs."
requires-python = ">=3.11"
authors = [
	{ name = "Software Factory Development Team", email = "softwarefactory-dev@redhat.com" }
	]
keywords = ["logs", "purge"]


[project.scripts]
purgelogs = "purgelogs:main"

[project.urls]
Homepage = "https://docs.softwarefactory-project.io/purgelogs"

[dependency-groups]
test = ["tox"]
